--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@suvelocity/tester": "^1.0.2",
+    "@types/puppeteer": "^5.4.3",
     "nock": "^12.0.3",
     "nock-puppeteer": "^1.0.2",
     "puppeteer": "^4.0.1"
